--- a/destiny-chat-client/Views/MainWindow.xaml
+++ b/destiny-chat-client/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="destiny_chat_client.MainWindow"
+﻿<Window x:Class="destiny_chat_client.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
