Add initial viewmodels + locator

--- a/destiny-chat-client/Views/MainWindow.xaml
+++ b/destiny-chat-client/Views/MainWindow.xaml
@@ -15,6 +15,7 @@
         TextElement.FontSize="16"
         TextElement.FontWeight="Regular"
         TextOptions.TextFormattingMode="Ideal"
+        DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
         TextOptions.TextRenderingMode="Auto"
         mc:Ignorable="d">
     <DockPanel>
