--- a/destiny-chat-client/App.xaml
+++ b/destiny-chat-client/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:destiny_chat_client"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
+        <local:ViewModelLocator x:Key="Locator"/>
     </Application.Resources>
 </Application>
