--- a/destiny-chat-client/App.xaml
+++ b/destiny-chat-client/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:destiny_chat_client"
+             xmlns:classes="clr-namespace:destiny_chat_client.Classes"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -16,6 +17,12 @@
             </ResourceDictionary.MergedDictionaries>
 
             <local:ViewModelLocator x:Key="Locator" />
+
+            <classes:BoolOpacityConverter x:Key="BoolOpacityConverter" />
+            <classes:BoolStringConverter x:Key="BoolStringConverter" />
+            <classes:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
+            <classes:EmoteConverter x:Key="EmoteConverter" />
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
