--- a/destiny-chat-client/Views/Dialogs/Login.xaml
+++ b/destiny-chat-client/Views/Dialogs/Login.xaml
@@ -1,12 +1,105 @@
 ﻿<UserControl x:Class="destiny_chat_client.Views.Dialogs.Login"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:destiny_chat_client.Views.Dialogs"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
-    </Grid>
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:viewModels="clr-namespace:destiny_chat_client.ViewModels"
+             mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance viewModels:MainWindowViewModel}"
+             TextElement.FontSize="16"
+             TextElement.FontWeight="Regular"
+             TextOptions.TextFormattingMode="Ideal"
+             TextOptions.TextRenderingMode="Auto"
+             Width="320" d:DesignWidth="300">
+    <UserControl.Resources>
+        <Style TargetType="Label" BasedOn="{StaticResource MaterialDesignLabel}">
+            <Setter Property="Foreground" Value="White" />
+        </Style>
+    </UserControl.Resources>
+    <DockPanel Background="#181818" Opacity="0.9">
+        <DockPanel DockPanel.Dock="Top">
+            <Border DockPanel.Dock="Top" Background="#424242" Padding="8">
+                <DockPanel>
+                    <materialDesign:Card Background="#424242" DockPanel.Dock="Right" Width="20"
+                                         VerticalAlignment="Center">
+                        <Label Content="X" FontSize="12" Padding="2" VerticalAlignment="Center"
+                               HorizontalAlignment="Center" Foreground="White" />
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="MouseDown">
+                                <i:InvokeCommandAction Command="{Binding ClosePopupCommand}" />
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </materialDesign:Card>
+                    <TextBlock Foreground="White">Login</TextBlock>
+                </DockPanel>
+            </Border>
+        </DockPanel>
+        <StackPanel Margin="4" Background="#181818">
+            <DockPanel>
+                <Label Content="Websocket ID: "
+                       DockPanel.Dock="Left"
+                       Style="{StaticResource {x:Type Label}}" />
+                <TextBox MinWidth="200"
+                         Foreground="White"
+                         Style="{StaticResource MaterialDesignTextBox}"
+                         Text="{Binding SettingsRepository.Sid, UpdateSourceTrigger=PropertyChanged}" />
+            </DockPanel>
+            <DockPanel>
+
+                <Label Content="Remember me key: "
+                       DockPanel.Dock="Left"
+                       Style="{StaticResource {x:Type Label}}" />
+                <TextBox MinWidth="200"
+                         Foreground="White"
+                         Style="{StaticResource MaterialDesignTextBox}"
+                         Text="{Binding SettingsRepository.RememberMe, UpdateSourceTrigger=PropertyChanged}" />
+            </DockPanel>
+            <DockPanel>
+                <Label Content="Username: "
+                       Opacity="0.6"
+                       DockPanel.Dock="Left"
+                       Style="{StaticResource {x:Type Label}}" />
+                <TextBox MinWidth="200"
+                         Opacity="0.6"
+                         IsReadOnly="True"
+                         Foreground="White"
+                         Style="{StaticResource MaterialDesignTextBox}"
+                         Text="{Binding SettingsRepository.Username, UpdateSourceTrigger=PropertyChanged}" />
+            </DockPanel>
+            <DockPanel>
+                <Label Content="Logged in: "
+                       Opacity="0.6"
+                       DockPanel.Dock="Left"
+                       Style="{StaticResource {x:Type Label}}" />
+                <TextBox MinWidth="200"
+                         Opacity="0.6"
+                         IsReadOnly="True"
+                         Foreground="White"
+                         Style="{StaticResource MaterialDesignTextBox}"
+                         Text="{Binding SettingsRepository.LoggedIn, UpdateSourceTrigger=PropertyChanged, Mode=OneWay, Converter={StaticResource BoolStringConverter}}" />
+            </DockPanel>
+
+            <Separator Height="3" Margin="0, 5" />
+
+
+            <Button Command="{Binding RetrieveDetailsCommand}"
+                    Style="{StaticResource MaterialDesignFlatButton}"
+                    Content="Find sid/rememberme on disk" />
+
+            <Button
+                Command="{Binding LoginCommand}"
+                Style="{StaticResource MaterialDesignFlatButton}"
+                Content="Attempt login" />
+
+            <Button
+                Command="{Binding LogoutCommand}"
+                Style="{StaticResource MaterialDesignFlatButton}"
+                Content="Clear data" />
+
+
+        </StackPanel>
+    </DockPanel>
 </UserControl>
