--- a/destiny-chat-client/Views/Dialogs/Users.xaml
+++ b/destiny-chat-client/Views/Dialogs/Users.xaml
@@ -1,12 +1,58 @@
 ﻿<UserControl x:Class="destiny_chat_client.Views.Dialogs.Users"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:destiny_chat_client.Views.Dialogs"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
-    </Grid>
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             mc:Ignorable="d"
+             Name="SettingsWindow"
+             Background="Transparent"
+             TextElement.FontSize="16"
+             TextElement.FontWeight="Regular"
+             TextOptions.TextFormattingMode="Ideal"
+             DataContext="{Binding Source={StaticResource Locator}, Path=Main}">
+    <DockPanel Background="#181818" Opacity="0.9" Height="500" Width="300">
+        <DockPanel DockPanel.Dock="Top">
+            <Border DockPanel.Dock="Top" Background="#424242" Padding="8">
+                <DockPanel>
+                    <materialDesign:Card Background="#424242" DockPanel.Dock="Right" Width="20"  VerticalAlignment="Center" >
+                        <Label Content="X" FontSize="12" Padding="2" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="MouseDown">
+                                <i:InvokeCommandAction Command="{Binding ClosePopupCommand}"/>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </materialDesign:Card>
+                    <TextBlock Foreground="White">Users (~<Run Text="{Binding ChatService.Users.Count, Mode=OneWay}" />)</TextBlock>
+                </DockPanel>
+            </Border>
+        </DockPanel>
+        <ListView BorderThickness="0" ItemsSource="{Binding ChatService.OrderedUsers}" Background="#181818">
+            <ListBox.Resources>
+                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Transparent" />
+                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
+                <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent" />
+                <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="Transparent" />
+            </ListBox.Resources>
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="IsSelected"
+                            Value="{Binding Content.IsSelected, Mode=TwoWay, RelativeSource={RelativeSource Self}}" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ListBoxItem">
+                                <ContentPresenter />
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListBox.ItemContainerStyle>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Label Foreground="White" Content="{Binding Username}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+    </DockPanel>
 </UserControl>
