--- a/destiny-chat-client/Views/Components/Chat.xaml
+++ b/destiny-chat-client/Views/Components/Chat.xaml
@@ -1,22 +1,77 @@
 ﻿<UserControl x:Class="destiny_chat_client.Views.Components.Chat"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:classes="clr-namespace:destiny_chat_client.Classes"
              xmlns:components="clr-namespace:destiny_chat_client.Views.Components"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             mc:Ignorable="d"
+             d:DesignWidth="350"
+             d:DesignHeight="500"
+             DataContext="{Binding Source={StaticResource Locator}, Path=Chat}">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="15*" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+        <Border
+            Panel.ZIndex="1"
+            Opacity="0.9" Grid.Row="1" 
+            Background="#1B1B1B" 
+            CornerRadius="6" 
+            Margin="4, 4, 20, 4"
+            Visibility="Collapsed"
+            MouseDown="GoToBottom"
+            Name="MoreMessagesPane">
+            <Border.Style>
+                <Style TargetType="Border">
+                    <Setter Property="TextElement.Foreground" Value="#759999"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="TextElement.Foreground" Value="White" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Border.Style>
+            <TextBlock VerticalAlignment="Center" 
+                       HorizontalAlignment="Center"
+                       Text="More messages below">
+            </TextBlock>
+        </Border>
         <ListBox
+            Panel.ZIndex="0"
+            Grid.Row="0"
+            Grid.RowSpan="2"
             BorderThickness="0"
             Background="Transparent"
-            IsTabStop="False">
+            IsTabStop="False"
+            VirtualizingPanel.ScrollUnit="Pixel"
+            ItemsSource="{Binding Chat}">
             <ListBox.Resources>
                 <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Transparent" />
                 <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
                 <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent" />
                 <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="Transparent" />
             </ListBox.Resources>
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="IsSelected"
+                            Value="{Binding Content.IsSelected, Mode=TwoWay, RelativeSource={RelativeSource Self}}" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ListBoxItem">
+                                <ContentPresenter />
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListBox.ItemContainerStyle>
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <VirtualizingStackPanel classes:PixelBasedScrollingBehavior.IsEnabled="True" />
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <components:Message DataContext="{Binding .}" />
@@ -24,4 +79,5 @@
             </ItemsControl.ItemTemplate>
         </ListBox>
     </Grid>
+
 </UserControl>
